fixed spacing on homepage

--- a/src/components/STEMtellCard/STEMtellCard.css
+++ b/src/components/STEMtellCard/STEMtellCard.css
@@ -50,7 +50,6 @@
    text-align: center;
    font-size: 18px;
    padding: 4px;
-   width: 100%;
 }
 
 #stemtellImage {
